derive/tests/fail/01-unknown-lifetime.stderr
error: Lifetime `'b` is not defined
 --> tests/fail/01-unknown-lifetime.rs:5:12
  |
5 | #[variance('b = co)]
  |            ^^

error: Lifetime `'b` is not defined
  --> tests/fail/01-unknown-lifetime.rs:11:12
   |
11 | #[variance('b = co)]
   |            ^^
